Fix tests broken in the course of bootstrapping

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,3 +31,9 @@ h1, h2, h3, h4 {
 .select2-container {
 	margin: 0 0 10px !important;
 }
+
+.user_needs {
+  .edit_link {
+    display: none;
+  }
+}
